--- a/intro_ds_py.ipynb
+++ b/intro_ds_py.ipynb
@@ -7,16 +7,14 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "pycharm-d1a0db0c",
    "language": "python",
-   "name": "python3"
+   "display_name": "PyCharm (data-analysis)"
   },
   "language_info": {
    "codemirror_mode": {
