--- a/intro_ds_wk1.ipynb
+++ b/intro_ds_wk1.ipynb
@@ -102,6 +102,84 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pfs01-001\n",
+      "Pfs01-002\n",
+      "Pfs01-003\n",
+      "Pfs01-004\n",
+      "Pfs01-005\n",
+      "Pfs01-006\n",
+      "Pfs01-007\n",
+      "Pfs01-008\n",
+      "Pfs01-009\n",
+      "Pfs01-010\n",
+      "Pfs01-011\n",
+      "Pfs01-012\n",
+      "Pfs01-013\n",
+      "Pfs01-014\n",
+      "Pfs01-015\n",
+      "Pfs01-016\n",
+      "Pfs01-017\n",
+      "Pfs01-018\n",
+      "Pfs01-019\n",
+      "Pfs01-020\n",
+      "Pfs01-021\n",
+      "Pfs01-022\n",
+      "Pfs01-023\n",
+      "Pfs01-024\n",
+      "Pfs01-025\n",
+      "Pfs01-026\n",
+      "Pfs01-027\n",
+      "Pfs01-028\n",
+      "Pfs01-029\n",
+      "Pfs01-030\n",
+      "Pfs01-031\n",
+      "Pfs02-049\n",
+      "Pfs02-032\n",
+      "Pfs02-033\n",
+      "Pfs02-034\n",
+      "Pfs02-035\n",
+      "Pfs02-036\n",
+      "Pfs02-037\n",
+      "Pfs02-038\n",
+      "Pfs02-039\n",
+      "Pfs02-040\n",
+      "Pfs02-041\n",
+      "Pfs02-042\n",
+      "Pfs02-043\n",
+      "Pfs02-044\n",
+      "Pfs02-045\n",
+      "Pfs02-046\n",
+      "Pfs02-047\n",
+      "Pfs02-048\n",
+      "Pfs02-050\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"/home/frdrck/Downloads/SC1_2021_10_06.csv\", index_col='id')\n",
+    "df = pd.DataFrame(df)\n",
+    "fr = pd.isna(df[' mhdate_E1_C1 '])\n",
+    "\n",
+    "for idx in fr.index:\n",
+    "    print(idx)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
