--- a/descrete_math_final_assignment.ipynb
+++ b/descrete_math_final_assignment.ipynb
@@ -70,6 +70,43 @@
     "# The results which should be submitted to the grader include the ACC of G_fb and of G_rand. Good luck!\n",
     "edge_probab"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['CD', 'DD', 'DF', 'SD', 'DD', 'FF', 'SS', 'SD', 'CB', 'SD']"
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def result():\n",
+    "    s = 'ACAABAACAAABACDBADDDFSDDDFFSSSASDAFAAACBAAAFASD'\n",
+    "\n",
+    "    result = []\n",
+    "    # compete the pattern below\n",
+    "    pattern = '[B-Z]{1}[^AAA]'\n",
+    "    for item in re.finditer(pattern, s):\n",
+    "      # identify the group number below.\n",
+    "      result.append(item.group())\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "result()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
